# djleague-htmx

./: .dockerignore  .editorconfig  .env.template  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: main.yml
djleague/: asgi.py  factories.py  models.py  settings.py  tests.py  urls.py  wsgi.py
djleague/migrations/: 0001_initial.py  0002_player_nfl_status.py
pages/: forms.py  tests.py  urls.py  views.py
static/css/: base.css
static/js/: base.js
templates/: _base.html
templates/draft/: _draft-player.html  _last_picks.html  _players.html  _team-players.html  _upcoming_picks.html  draft.html
templates/fantasyteams/: _edit.html  _messages.html  _row.html  edit.html  index.html
templates/players/: draft.html
