[project]
name = "djleague-htmx"
version = "1.0.0"
description = "Fantasy Football draft system build with Django and HTMX"
readme = "README.md"
requires-python = "~=3.12"

dependencies = [
    "black==25.1.0",
    "crispy-bootstrap5==2025.6",
    "django==5.1.8",
    "django-crispy-forms==2.4",
    "django-debug-toolbar==6.0.0",
    "django-filter==25.1",
    "django-health-check==3.20.0",
    "environs[django]==14.3.0",
    "factory-boy==3.3.3",
    "flake8==7.3.0",
    "flake8-bugbear==24.12.12",
    "gunicorn==23.0.0",
    "psycopg[binary,pool]==3.2.9",
    "pusher==3.3.3",
    "python-dateutil==2.9.0.post0",
    "sentry-sdk==2.35.2",
    "tblib>=3.1.0",
    "unittest-xml-reporting==3.2.0",
    "whitenoise[brotli]==6.9.0",
]

[tool.black]
line-length = 110
target-version = ['py312']
